Bug 1637511 - Keep suppressing scrollbars than don't fit in the scrollport for overflow: auto. r=dholbert

Given there's content depending on it. This brings back the check from
before the regression.

I had to tweak percent-height-overflowing-image-1.html so that it
doesn't hit scrollbar size limits on GTK (which are a bit ridiculous
IMHO, but oh well).

Differential Revision: https://phabricator.services.mozilla.com/D75171